--- a/src/main/resources/com/example/info445project/teacher-view.fxml
+++ b/src/main/resources/com/example/info445project/teacher-view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.info445project.HomeController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.info445project.TeacherController">
    <children>
       <HBox alignment="BASELINE_LEFT">
          <children>
@@ -32,14 +32,6 @@
                         <Tooltip text="Add Class" />
                      </tooltip>
                   </Button>
-                  <Button layoutX="689.0" layoutY="29.0" mnemonicParsing="false" onAction="#onShowAllTeachersButton" style="-fx-background-radius: 50;" text="Show All Teachers">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                     <tooltip>
-                        <Tooltip text="Add Class" />
-                     </tooltip>
-                  </Button>
                </children>
             </Pane>
          </children>
@@ -48,20 +40,11 @@
          <children>
             <Accordion prefWidth="1002.0">
               <panes>
-                <TitledPane animated="false" prefHeight="200.0" prefWidth="1000.0" text="My Courses">
+                <TitledPane animated="false" prefHeight="323.0" prefWidth="1002.0" text="My Courses">
                      <content>
-                        <ScrollPane prefHeight="443.0" prefWidth="1000.0">
+                        <ScrollPane prefHeight="243.0" prefWidth="1000.0">
                            <content>
-                              <TilePane fx:id="student_courses_tilepane" prefHeight="322.0" prefWidth="982.0" />
-                           </content>
-                        </ScrollPane>
-                     </content>
-                </TitledPane>
-                <TitledPane animated="false" prefHeight="200.0" prefWidth="1000.0" text="My Private Teachers">
-                     <content>
-                        <ScrollPane prefHeight="443.0" prefWidth="1000.0">
-                           <content>
-                              <TilePane fx:id="private_teachers_tilepane" prefHeight="323.0" prefWidth="980.0" />
+                              <TilePane fx:id="teacher_courses_tilepane" prefHeight="322.0" prefWidth="982.0" />
                            </content>
                         </ScrollPane>
                      </content>
@@ -74,7 +57,7 @@
          <children>
             <Pane prefHeight="92.0" prefWidth="907.0">
                <children>
-                  <Button cancelButton="true" layoutY="45.0" mnemonicParsing="false" onAction="#onBackToLoginClick" prefHeight="39.0" prefWidth="79.0" style="-fx-background-color: white; -fx-border-color: red;" text="LogOut">
+                  <Button cancelButton="true" layoutX="14.0" layoutY="27.0" mnemonicParsing="false" onAction="#onBackToLoginClick" prefHeight="39.0" prefWidth="79.0" style="-fx-background-color: white; -fx-border-color: red;" text="LogOut">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -84,7 +67,7 @@
                   </Button>
                </children>
             </Pane>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#onAddClassClick" style="-fx-background-radius: 50;" text="+" textFill="WHITE">
+            <Button accessibleHelp="Create New Course" defaultButton="true" mnemonicParsing="false" onAction="#showCreateCourseView" prefHeight="72.0" prefWidth="230.0" style="-fx-background-radius: 50;" text="Create" textFill="WHITE">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
